tests/neg-custom-args/captures/i15923b.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i15923b.scala:8:21 ---------------------------------------
8 |  val leak = withCap(f) // error
  |                     ^
  |Found:    (x$0: Cap^) -> Id[box Cap^{x$0}]
  |Required: (lcap: Cap^) => box Id[box Cap^?]^?
  |
  |where:    => refers to a fresh root capability created in value leak when checking argument to parameter op of method withCap
  |          ^  refers to the universal root capability
  |
  |Note that reference lcap.type
  |cannot be included in outer capture set ?
  |
  | longer explanation available when compiling with `-explain`
